# opennurbs

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  examples.h  examples_linking_pragmas.h  freetype  index.html  makefile  opennurbs.additional.manifest  opennurbs.h  opennurbs.natvis  opennurbs.rc  opennurbs.vcxproj.metaproj  opennurbs_3dm.h  opennurbs_3dm_attributes.cpp  opennurbs_3dm_attributes.h  opennurbs_3dm_properties.cpp  opennurbs_3dm_properties.h  opennurbs_3dm_settings.cpp  opennurbs_3dm_settings.h  opennurbs_annotationbase.cpp  opennurbs_annotationbase.h  opennurbs_apple_nsfont.cpp  opennurbs_apple_nsfont.h  opennurbs_arc.cpp  opennurbs_arc.h  opennurbs_arccurve.cpp  opennurbs_arccurve.h  opennurbs_archivable_dictionary.cpp  opennurbs_archivable_dictionary.h  opennurbs_archive.cpp  opennurbs_archive.h  opennurbs_archive_manifest.cpp  opennurbs_array.cpp  opennurbs_array.h  opennurbs_array_defs.h  opennurbs_atomic_op.h  opennurbs_base32.cpp  opennurbs_base32.h  (+361 more)
6/: README  annotated.html  class_o_n__2d_point-members.html  class_o_n__2d_point.html  class_o_n__2d_point_array-members.html  class_o_n__2d_point_array.html  class_o_n__2d_size-members.html  class_o_n__2d_size.html  class_o_n__2d_vector-members.html  class_o_n__2d_vector.html  class_o_n__2d_vector_array-members.html  class_o_n__2d_vector_array.html  class_o_n__2dex_map-members.html  class_o_n__2dex_map.html  class_o_n__2f_point-members.html  class_o_n__2f_point.html  class_o_n__2f_point_array-members.html  class_o_n__2f_point_array.html  class_o_n__2f_vector-members.html  class_o_n__2f_vector.html  class_o_n__2f_vector_array-members.html  class_o_n__2f_vector_array.html  class_o_n__2i_bounding_box-members.html  class_o_n__2i_bounding_box.html  class_o_n__2i_point-members.html  class_o_n__2i_point.html  class_o_n__2i_size-members.html  class_o_n__2i_size.html  class_o_n__2i_vector-members.html  class_o_n__2i_vector.html  class_o_n__3_d_m___b_i_g___c_h_u_n_k-members.html  class_o_n__3_d_m___b_i_g___c_h_u_n_k.html  class_o_n__3d_point-members.html  class_o_n__3d_point.html  class_o_n__3d_point_array-members.html  class_o_n__3d_point_array.html  class_o_n__3d_point_list_ref-members.html  class_o_n__3d_point_list_ref.html  class_o_n__3d_ray-members.html  class_o_n__3d_ray.html  (+922 more)
6/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_7.js  (+89 more)
7/: README
android_uuid/: CMakeLists.txt  COPYING  README.md  clear.c  compare.c  config.h  copy.c  dirpaths.h  gen_uuid.c  gen_uuid_nt.c  isnull.c  pack.c  parse.c  unpack.c  unparse.c  uuid.h  uuidP.h  uuid_time.c  uuid_types.h  uuidd.h
cross_dirent/: cross_dirent.h
example_brep/: example_brep.cpp  example_brep.vcxproj  example_brep.vcxproj.filters  my_brep.3dm
example_brep/example_brep.xcodeproj/: project.pbxproj
example_convert/: example_convert.cpp  example_convert.vcxproj  example_convert.vcxproj.filters
example_convert/example_convert.xcodeproj/: project.pbxproj
example_files/V1/: v1_Camera.3dm  v1_DeformCubes.3dm  v1_DeformSpheres.3dm  v1_Flow1.3dm  v1_Flow2.3dm  v1_Flow3.3dm  v1_HumanHead1.3dm  v1_HumanHead2.3dm  v1_Hypercycloid.3dm  v1_Lightbulb.3dm  v1_MatchSrf.3dm  v1_Patch.3dm  v1_RhinoLogo.3dm  v1_SketchOnMesh.3dm  v1_Smooth.3dm  v1_Soccer.3dm  v1_Speeder.3dm  v1_SphericalSpiral.3dm  v1_Stearman.3dm  v1_T-Joint1.3dm  v1_T-Joint2.3dm  v1_Terrain.3dm  v1_UntrimmedSurfaces.3dm  v1_five_solids.3dm  v1_three_curves.3dm  v1_three_points.3dm
example_files/V2/: v2_23_points.3dm  v2_5_curves.3dm  v2_Camera.3dm  v2_DeformCubes.3dm  v2_DeformSpheres.3dm  v2_Flow1.3dm  v2_Flow2.3dm  v2_Flow3.3dm  v2_HumanHead1.3dm  v2_HumanHead2.3dm  v2_Hypercycloid.3dm  v2_Lightbulb.3dm  v2_MatchSrf.3dm  v2_Patch.3dm  v2_RhinoLogo.3dm  v2_SketchOnMesh.3dm  v2_Smooth.3dm  (+17 more)
example_gl/: example_gl.cpp
example_read/: example_read.cpp  example_read.vcxproj  example_read.vcxproj.filters
example_roundtrip/: example_roundtrip.cpp  example_roundtrip.vcxproj  example_roundtrip.vcxproj.filters
example_test/: CMakeLists.txt  README.md  example_test.cpp  example_test.vcxproj  example_test.vcxproj.filters
example_test/example_test.xcodeproj/: project.pbxproj
example_test/example_test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example_userdata/: example_ud.cpp  example_ud.h  example_userdata.cpp  example_userdata.vcxproj  example_userdata.vcxproj.filters  my_point_with_user_data.3dm
example_write/: example_write.cpp  example_write.vcxproj  example_write.vcxproj.filters  my_curves.3dm  my_mesh.3dm  my_mesh_with_material.3dm  my_points.3dm  my_spot_light.3dm  my_surfaces.3dm  my_trimmed_surface.3dm  my_viewports.3dm
freetype263/: CMakeLists.txt  dllmain.cpp  freetype263.vcxproj  freetype263.vcxproj.filters  freetype263_Version.rc  freetype263_staticlib.vcxproj  freetype263_staticlib.vcxproj.filters  stdafx.cpp
opennurbsRhino_iOS.xcodeproj/: project.pbxproj
opennurbs_public.xcodeproj/: project.pbxproj
opennurbs_public.xcworkspace/: contents.xcworkspacedata
tests/: CMakeLists.txt  README.md  TestBase64.cpp  TestBooleanUnion.cpp  TestClosestPoint.cpp  TestCurveCurveIntersection.cpp  TestCurveSurfaceIntersection.cpp  TestNurbsCageEvaluate.cpp  TestPrecompiledHeader.cpp  TestQuotientRule.cpp  TestTree.cpp  TestZLib.cpp  Tests.cpp  Tests.h  Tests.vcproj  hello_test.cpp  test_ClassSize.cpp
tests/Input/: TestCSX.3dm  TestClosestPoint.3dm  TestCurveCurveIntersection.3dm  mesh_clspt_test.3dm
tests/fileio/: CMakeLists.txt  README.md  test_ON_FileIO.cpp
zlib/: CMakeLists.txt  adler32.c  crc32.c  crc32.h  deflate.c  deflate.h  infback.c  inffast.c  inffast.h  inflate.c  inflate.h  inftrees.c  trees.c  zconf.h  zlib.vcxproj  zlib.vcxproj.metaproj  zutil.c  zutil.h
(+1410 files in other folders)
